# newswitch-mono

./: .gitignore  .lefthookrc  CHANGELOG.md  README.md  commitlint.config.cjs  docker-compose.yml  justfile  lefthook.yml  release.config.cjs
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  graphql.config.yaml  main.py  pyproject.toml  test.py
backend/.github/workflows/: release.yaml  tests.yaml
backend/configs/: uc2_canopen.json  uc2_serial.json
backend/docs/: DEVELOPER_OVERVIEW.md
backend/newswitch/: __init__.py  app.py
backend/newswitch/broadcasters/: __init__.py  frame.py
backend/newswitch/broadcasters/encoders/: __init__.py  base.py  config.py  h264_encoder.py  subscription.py  zstd_encoder.py
backend/newswitch/hooks/: software_autofocus.py
backend/newswitch/logic/: __init__.py  affine_matrix.py
backend/newswitch/managers/: __init__.py  acquistion_manager.py  calibration.py  expanse_manager.py  light_path.py  metadata_manager.py  python_hook_manager.py
backend/newswitch/managers/cache/: local_cache.py
backend/newswitch/managers/helpers/: __init__.py  frame.py  psf.py
backend/newswitch/managers/io/: __init__.py  local_file.py
backend/newswitch/managers/uc2/: __init__.py  canopen_bus.py  detector_manager.py  dispatch.py  event_broker.py  filter_bank_manager.py  galvo_scanner.py  illumination_manager.py  rest_bus.py  serial_manager.py  stage_manager.py  uc2_detector_manager.py  virtual_bus.py
backend/newswitch/managers/virtual/: __init__.py  virtual_detector.py  virtual_filter_bank.py  virtual_led.py  virtual_objective.py  virtual_serial_manager.py  virtual_stage.py  virtual_z_range.py
backend/newswitch/plugins/: gonio_meter.py
backend/newswitch/protocols/: __init__.py  acquistion_manager.py  base.py  cache.py  calibration.py  core.py  detector.py  expanse.py  filter_bank.py  hook_manager.py  illumination.py  io.py  light_path.py  metadata.py  objective.py  serial_manager.py  stage.py  uc2.py  z_range.py
backend/newswitch/routes/: __init__.py
backend/newswitch/routes/http/: __init__.py  cache.py  files.py
backend/newswitch/routes/ws/: __init__.py  liveview.py
backend/newswitch/routines/: __init__.py  calibration.py  multidimensional_acquisition.py  region_scan.py
backend/newswitch/uc2_devices/: CMakeLists.txt  README.md  __init__.py  hik_camera.py  settings.py  testHik.py  uc2DevSettings.json  uc2_camera.py
backend/newswitch/uc2_devices/bindings/: hikcam_py.cpp  ringbuffer_py.cpp
backend/newswitch/uc2_devices/core/include/: CaptureApp.h  ImageWindow.h  MvsCamera.h  MvsError.h  Ringbuffer.hpp
backend/newswitch/uc2_devices/core/src/: CaptureApp.cpp  ImageWindow.cpp  MvsCamera.cpp  MvsError.cpp  Ringbuffer.cpp  SAMPLE_GRAB_IMGHIGHPERFORM.cpp  main.cpp
backend/newswitch/uc2_devices/tests/: CMakeLists.txt  test_ringbuffer.cpp  test_ringbuffer_py.py
backend/tests/: __init__.py  conftest.py  test_acquisition.py  test_affine_matrix.py  test_api.py  test_capture_image_api.py  test_capture_image_io.py  test_uc2_bus.py  test_virtual_detector.py  test_virtual_stage.py
frontend/: .env  .env.docker  .prettierrc.json  Dockerfile  README.md  app.tsx  blok.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.github/workflows/: release.yml
frontend/plugins/: generate-app.ts
frontend/src/: App.tsx  constants.tsx  global.d.ts  vite-env.d.ts
frontend/src/apps/: index.ts
frontend/src/apps/default/: app.ts
frontend/src/apps/default/hooks/: useCancelTask.ts  useLockStore.ts  usePauseTask.ts  useResumeTask.ts  useStateStore.ts  useStepTask.ts  useTaskStore.ts
frontend/src/components/: ActionButton.tsx  Delayed.tsx  SyncKeyDebug.tsx  TaskDisplay.tsx
frontend/src/components/lightpath/: LightPathRender.tsx  layoutUtils.tsx
frontend/src/components/lightpath/nodes/: DetectorNode.tsx  FilterNode.tsx  GenericNode.tsx  IlluminationNode.tsx  ObjectiveTurretNode.tsx
frontend/src/components/lightpathstate/: LightPathStateRender.tsx
frontend/src/components/lightpathstate/nodes/: DetectorNode.tsx  FilterNode.tsx  GenericNode.tsx  IlluminationNode.tsx  NodeHeader.tsx  ObjectiveNode.tsx  OpticalNodes.tsx  index.tsx  styles.ts
frontend/src/components/liveview/: StreamingView.tsx
frontend/src/components/microscope/: CalibrateLightPath.tsx  CameraControl.tsx  FilterBankControl.tsx  IlluminationControl.tsx  LatestImage.tsx  LightPaths.tsx  LiveView.tsx  MultidimensionalAcquisitionControl.tsx  MultidimensionalAcquisitionDialog.tsx  ObjectiveControl.tsx  SettingsPanel.tsx  StageControl.tsx  StatusPanel.tsx  index.ts
frontend/src/components/navigation/: AppNavigationChrome.tsx
frontend/src/components/stage/: CameraMatrixSync.tsx  Expanse.tsx  PanelProvider.tsx  ScaleBar.tsx  StageBox.tsx  panelContext.ts
frontend/src/components/stage/cameras/: CameraController.tsx
frontend/src/components/stage/controllers/: KeyboardModeController.tsx
frontend/src/components/stage/hooks/: useH264LiveTexture.tsx  useLiveZstdTexture.tsx  useSelectedFrame.tsx  useSelectedImage.tsx  useShouldRender.tsx
frontend/src/components/stage/interactions/: RectangleDrawer.tsx  StagePositioner.tsx
frontend/src/components/stage/overlays/: DebugOverlay.tsx  SceneOverlay.tsx  TimeOverlay.tsx
frontend/src/components/ui/: alert-dialog.tsx  avatar.tsx  button.tsx  dialog.tsx  field.tsx  locked-slider.tsx  optimistic_slider.tsx  popover.tsx  responsive-grid.tsx  sheet.tsx  switch.tsx
frontend/src/hooks/: useCaptureAndDownload.ts  useCurrentAffineTransform.ts  useCurrentPixelDimensions.ts  useLock.tsx  useStatePath.ts  zodToChoices.ts
frontend/src/lib/: expanders.ts
frontend/src/lib/rekuest/: BundleProvider.tsx  RekuestStoreProvider.tsx  createScopedProvider.tsx  createScopedStore.ts  index.ts  types.ts
frontend/src/pages/: IndexPage.tsx  ReplayPage.tsx  index.ts
frontend/src/store/: createScopedStore.ts  imageStore.ts  immer.ts  index.ts  kubeStateStore.ts  kubeStore.ts  modeStore.ts  provider.tsx  scansStore.ts  timeStore.ts  viewStore.ts  viewerStore.ts
(+140 files in other folders)
