[project]
name = "newswitch"
version = "0.10.0"
readme = "README.md"
description = "A better openuc2 backend"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11, <4.0"
license = "GPL-3.0-or-later"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "kaffine==1.1.0",
    "lz4>=4.4.5",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pint>=0.25.2",
    "pydantic>=2.11.4",
    "pyserial-asyncio>=0.6",
    "pystackreg>=0.2.8",
    "rekuest-next==1.6.2",
    "scipy>=1.17.0",
    "tifffile>=2026.1.28",
    "useq-schema>=0.8.1",
    "uvicorn>=0.40.0",
    "zarr>=3,<4",
    "zarrs>=0.2.2",
    "zstandard>=0.25.0",
]

[project.urls]
Homepage = "https://arkitekt.live"

[project.optional-dependencies]
types = [
    "annotated-types>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.0",
    "testcontainers==3.7.0",
    "autoflake>=1.7.7,<2",
    "aiohttp>=3.8.3,<4",
    "black>=23.1.0,<24",
    "pytest-aiohttp>=1.0.4,<2",
    "ruff>0.11",
    "qtpy>=2.4.3",
    "fakts-next>=2.0.0",
    "arkitekt-next>=0.17",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.90",
    "scipy-stubs>=1.17.1.0",
    "pybind11-stubgen>=2.5",
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

# --- Native build (pybind11 via CMake), driven by scikit-build-core ---------
# The top-level CMakeLists.txt is the entry point; it descends into
# newswitch/uc2_devices/CMakeLists.txt for the device C++ interface.
# scikit-build-core auto-provisions cmake/ninja if they are not on PATH.
[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.15"
build-dir = "build/{wheel_tag}"
wheel.packages = ["newswitch"]


[tool.ruff]
extend-select = ["ANN", "D1", "F401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv",
]

# Same as Black.
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running server",
    "define: marks tests that concern to definining a funcionality",
    "shrink: marks tests that concern to serializing inputs to requests to an actor",
    "expand: marks tests that concern to serializing outputs from answers of an actor",
    "actor: marks tests that concern actors",
]
testpaths = ["tests"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["arkitekt"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"